style: widescreen, scrollbar, fix: long words

--- a/src/app/pages/contacts/contact-details/contact-details.scss
+++ b/src/app/pages/contacts/contact-details/contact-details.scss
@@ -36,7 +36,7 @@
   gap: 30px;
   min-height: 73px;
 
-  @media (max-width: 1258px) and (min-width: 881px) {
+  @media (max-width: 1320px) and (min-width: 881px) {
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
@@ -66,7 +66,7 @@
   border-left: 3px solid $ligth-blue-color;
   flex-shrink: 0;
 
-  @media (max-width: 1258px) and (min-width: 881px) {
+  @media (max-width: 1320px) and (min-width: 881px) {
     width: 60px;
     height: 0;
     border-left: none;
@@ -106,10 +106,11 @@
     gap: 24px;
   }
 
-  @media (max-width: 950px) and (min-width: 881px) {
+  @media (max-width: 1320px) and (min-width: 881px) {
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
+    padding-right: 16px;
   }
 }
 
@@ -127,7 +128,7 @@
   line-height: 120%;
   text-transform: uppercase;
 
-  @media (max-width: 1258px) and (min-width: 881px) {
+  @media (max-width: 1320px) and (min-width: 881px) {
     width: 100px;
     height: 100px;
     font-size: 40px;
@@ -152,7 +153,7 @@
   font-weight: 500;
   line-height: 120%;
   color: #000000;
-  word-break: break-word;
+  word-break: normal;
 
   @media (max-width: 1258px) and (min-width: 881px) {
     font-size: 36px;
@@ -160,6 +161,13 @@
 
   @media (max-width: 950px) and (min-width: 881px) {
     font-size: 28px;
+  }
+      @include mobile-desktop{
+    word-break: break-all;
+  }
+
+      @include small-mobile{
+    word-break: break-all;
   }
 }
 
@@ -414,6 +422,15 @@
     letter-spacing: 0;
     word-break: normal;
     overflow-wrap: normal;
+    
+    @include mobile-desktop{
+    word-break: break-all;
+  }
+
+      @include small-mobile{
+    word-break: break-all;
+  }
+
   }
 
   :host-context(.contacts__main--detail-open) .contact-details__actions {
