--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -58,6 +58,7 @@
     @include mobile {
         height: 40px;
         width: 40px;
+        font-size: 18px;
     }
 }
 
